# smsender/model/provider.go
@@ -1,11 +1,11 @@
 package model
 
-type Broker interface {
+type Provider interface {
 	Name() string
 	Send(message *Message, result *MessageResult)
 	Callback(register func(webhook *Webhook), receipts chan<- MessageReceipt)
 }
 
-type BrokerError struct {
+type ProviderError struct {
 	Error string `json:"error"`
 }
